traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:7: error: not found: value EAST
    if (estFaceMur&&getDirection()==EAST) {
                                    ^TraversalZigZag:26: error: not found: value Direction
      if (getDirection()==Direction.EAST) {
                          ^